Addressing assorted issues on the way to v3 (#658)
* address issue 633 add to Hector publications

* update the inis and add documentation

* replace deprecated calls

* add citation file

* Update leeyabot.yml

* Update test_hector.sh

* Update test_hector.sh with new input file naming convention

* Consistent file names and add back the constraints mistakenly deleted


Co-authored-by: Ben Bond-Lamberty <bondlamberty@pnnl.gov>

--- a/inst/input/hector_ssp119.ini
+++ b/inst/input/hector_ssp119.ini
@@ -30,28 +30,29 @@ tid=200000000       	; 2.0e8 intermediate-deep exchange, m3/s
 ; - the nppv, nppd, and litterd partitioning parameters
 ; - beta and q10_rh
 
-atmos_co2=588.071			; Pg C in CO2, from Murakami et al. (2010)
-C0=277.15			; preindustrial CO2 from table 7.SM.1 IPCC AR6
-;boreal.veg_c=100		; e.g.
-;tropical.veg_c=450
-veg_c=550			; vegetation, Pg C
+atmos_co2=590.33		; initial atmospheric carbon pool Pg C of CO2 size used in spin up, consistent with C0
+C0=277.15			; preindustrial CO2 from table 7.SM.1 IPCC AR6, CO2 radiative forcing question is calibrated to this value
+npp_flux0=56.2			; preindustrial net primary production, Pg C/yr from Ito et al. 2011
+
+veg_c=550			; initial vegetation pool, Pg C
+detritus_c=55			; initial detritus pool, Pg C
+soil_c=1782   			; initial soil pool, Pg C
+;boreal.veg_c=100		
 ;boreal.detritus_c=15
-;tropical.detritus_c=45
-detritus_c=55			; detritus, Pg C
 ;boreal.soil_c=1200
-;tropical.soil_c=578
-soil_c=1782   			; soil, Pg C
 ;boreal.npp_flux0=5.0
+;tropical.veg_c=450
+;tropical.detritus_c=45
+;tropical.soil_c=578
 ;tropical.npp_flux0=45.0
-npp_flux0=55.9			; net primary production, Pg C/yr, (calibrated to historical observations)
 
 ; Partitioning parameters
 f_nppv=0.35			; Fraction of NPP to vegetation
 f_nppd=0.60			; Fraction of NPP to detritus (balance to soil)
-f_litterd=0.98			; Fraction of litter flux to detritus (balance to soil)
+f_litterd=0.98	; Fraction of litter flux to detritus (balance to soil)
 
 ; Anthropogenic contributions: emissions, direct air carbon capture and storage, and land use change, Pg C/yr
-ffi_emissions=csv:tables/ssp119_emiss-constraints_rf.csv
+ffi_emissions=csv:tables/ssp119_emiss-constraints_rf.csv	
 daccs_uptake=csv:tables/ssp119_emiss-constraints_rf.csv
 luc_emissions=csv:tables/ssp119_emiss-constraints_rf.csv
 luc_uptake=csv:tables/ssp119_emiss-constraints_rf.csv
@@ -64,19 +65,19 @@ luc_uptake=csv:tables/ssp119_emiss-constraints_rf.csv
 ; Optional net biome production (land-atmosphere C flux) constaint, Pg C/yr
 ; Positive represents flux to land, negative represents flux to atmosphere
 ; If supplied, the model will use these data, ignoring what it calculates
-;NBP_constrain=csv:tables/nbp_constraint.csv	                ;
+;NBP_constrain=csv:tables/ssp119_emiss-constraints_rf.csv	                ;
 
 ; CO2 and temperature effects on the carbon cycle
 ; these are global values, can optionally specify biome-specific ones as above
-beta=0.16     		; calibrated to historical observations
-q10_rh=1.5		; respiration response Q10 (calibrated to historical observations), unitless
+beta=0.55     		; CO2 fertilization factor (unitless), calibrated to historical observations see Dorheim et al. in prep for details
+q10_rh=2.16   		; Heterotrophic respiration temperature sensitivity factor (unitless), calibrated to historical observations see Dorheim et al. in prep for details
 
 ; Optional biome-specific warming factors
 ; by default, assume 1.0 (i.e., warms as fast as the globe)
 ;boreal.warmingfactor=1.2	; i.e., biome will warm 1.2 C for every 1 C globally
 
 ; Albedo effect, in W/m2. The model assumes a constant value if nothing specified
-RF_albedo=csv:tables/ssp119_emiss-constraints_rf.csv		;
+RF_albedo=csv:tables/ssp119_emiss-constraints_rf.csv	;
 
 ;------------------------------------------------------------------------
 [carbon-cycle-solver]
@@ -157,15 +158,15 @@ RF_misc[1750]=0
 [temperature]
 enabled=1
 
-S=2.7 			; equilibrium climate sensitivity for 2xCO2, degC (calibrated to historical)
-diff=2.4		; ocean heat diffusivity, cm2/s (calibrated to historical)
-alpha=0.5     		; scaling factor for aerosol forcing, calibrated to historical observations
-volscl=1.0    		; scaling factor for volcanic forcing
+S=3.0 			; equilibrium climate sensitivity for 2xCO2 degC (A.4.4 of IPCC AR6)
+diff=1.18		; ocean heat diffusivity, cm2/s calibrated to historical observations see Dorheim et al. in prep for details
+alpha=1.0     		; uncertainty scaling factor for aerosol forcing
+volscl=1.0    		; uncertainty scaling factor for volcanic forcing
 qco2=3.75     		; 2×CO2 RF (7.3.2 of IPCC AR6)
 
 ; Optional global temperature constraint
 ; If supplied, the model will use these data, ignoring what it calculates
-; tas_constrain=csv:tables/tas_historical.csv
+; tas_constrain=csv:tables/ssp119_emiss-constraints_rf.csv
 
 ;------------------------------------------------------------------------
 [bc]
