--- a/.github/workflows/leeyabot.yml
+++ b/.github/workflows/leeyabot.yml
@@ -7,9 +7,9 @@ on:
 
 jobs:
   run:
-    runs-on: [ubuntu-latest]
+    runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
       - uses: iterative/setup-cml@v1
       - uses: r-lib/actions/setup-r@v2
         with:
@@ -39,9 +39,14 @@ jobs:
         env:
           REPO_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-         cd scripts/
-         if [ -f "diff_plot.png" ]; then
-          cml-publish "diff_plot.png" --md >> OutputDifferences.knit.md
-          cml-publish "comp_plot.png" --md >> OutputDifferences.knit.md
-          fi
-         cml-send-comment OutputDifferences.knit.md
+            # Post reports as comments in GitHub PRs
+            cd scripts/
+            if [ -f "diff_plot.png" ]
+            then
+                cat OutputDifferences.knit.md >> report.md
+                echo "![](./diff_plot.png)" >> report.md
+                echo "![](./comp_plot.png)" >> report.md
+            else
+                echo “leeyabot down“ > report.md
+            fi
+            cml comment create report.md
