--- a/inst/input/hector_ssp534-over.ini
+++ b/inst/input/hector_ssp534-over.ini
@@ -18,8 +18,8 @@ tu=49000000         	; 4.9e7 high latitude overturning, m3/s
 twi=12500000        	; 1.25e7 warm-intermediate exchange, m3/s
 tid=200000000       	; 2.0e8 intermediate-deep exchange, m3/s
 
-surface_c=900			; surface ocean C, IPCC AR6 Figure 5.12
-interdeep_c=37100		; intermediate and deep ocean C, IPCC AR6 Figure 5.12
+preind_surface_c=900		; surface ocean C, IPCC AR6 Figure 5.12
+preind_interdeep_c=37100	; intermediate and deep ocean C, IPCC AR6 Figure 5.12
 
 ;------------------------------------------------------------------------
 [simpleNbox]
