--- a/NAMESPACE
+++ b/NAMESPACE
@@ -99,6 +99,8 @@ export(EMISSIONS_SO2)
 export(FFI_EMISSIONS)
 export(FLUX_INTERIOR)
 export(FLUX_MIXED)
+export(FRAC_DECOMP_CH4)
+export(FRAC_FROZEN)
 export(FTOT_CONSTRAIN)
 export(F_LITTERD)
 export(F_NPPD)
@@ -150,6 +152,8 @@ export(PCO2)
 export(PCO2_HL)
 export(PCO2_LL)
 export(PERMAFROST_C)
+export(PERMAFROST_MU)
+export(PERMAFROST_SIGMA)
 export(PH)
 export(PH_HL)
 export(PH_LL)
@@ -236,6 +240,7 @@ export(SST)
 export(SST_HL)
 export(SST_LL)
 export(TAS_CONSTRAIN)
+export(THAWEDP_C)
 export(TID)
 export(TRACKING_DATE)
 export(TT)
