Add permafrost to command-line test script

--- a/inst/input/hector_ssp245.ini
+++ b/inst/input/hector_ssp245.ini
@@ -46,9 +46,13 @@ soil_c=1782   			; initial soil pool, Pg C
 ;tropical.soil_c=578
 ;tropical.npp_flux0=45.0
 
-; Permafrost is inactive by default in Hector v3
+; Permafrost is inactive (zero) by default in Hector v3
 ; See Woodard et al. 2021, 10.5194/gmd-14-4751-2021
-permafrost_c=0			; permafrost, Pg C
+permafrost_c=0	; permafrost, Pg C
+;fpf_static=0.74		; fraction of permafrost that is static (non-labile)
+;rh_ch4_frac=0.023	; fraction of thawed permafrost decomposed as CH4
+;pf_mu=1.67			; permafrost thaw parameter; see Woodard et al. 2021
+;pf_sigma=0.986		; permafrost thaw parameter; see Woodard et al. 2021
 
 ; Partitioning parameters
 f_nppv=0.35			; Fraction of NPP to vegetation
