--- a/inst/input/hector_ssp245.ini
+++ b/inst/input/hector_ssp245.ini
@@ -40,10 +40,12 @@ soil_c=1782   			; initial soil pool, Pg C
 ;boreal.veg_c=100		
 ;boreal.detritus_c=15
 ;boreal.soil_c=1200
+;boreal.permafrost_c=865
 ;boreal.npp_flux0=5.0
 ;tropical.veg_c=450
 ;tropical.detritus_c=45
 ;tropical.soil_c=578
+;tropcal.permafrost_c=0
 ;tropical.npp_flux0=45.0
 
 ; Permafrost is inactive (zero) by default in Hector v3
