--- a/inst/input/hector_ssp534-over.ini
+++ b/inst/input/hector_ssp534-over.ini
@@ -40,15 +40,21 @@ soil_c=1782   			; initial soil pool, Pg C
 ;boreal.veg_c=100		
 ;boreal.detritus_c=15
 ;boreal.soil_c=1200
+;boreal.permafrost_c=865
 ;boreal.npp_flux0=5.0
 ;tropical.veg_c=450
 ;tropical.detritus_c=45
 ;tropical.soil_c=578
+;tropcal.permafrost_c=0
 ;tropical.npp_flux0=45.0
 
-; Permafrost is inactive by default in Hector v3
+; Permafrost is inactive (zero) by default in Hector v3
 ; See Woodard et al. 2021, 10.5194/gmd-14-4751-2021
-permafrost_c=0			; permafrost, Pg C
+permafrost_c=0	; permafrost, Pg C
+;fpf_static=0.74		; fraction of permafrost that is static (non-labile)
+;rh_ch4_frac=0.023	; fraction of thawed permafrost decomposed as CH4
+;pf_mu=1.67			; permafrost thaw parameter; see Woodard et al. 2021
+;pf_sigma=0.986		; permafrost thaw parameter; see Woodard et al. 2021
 
 ; Partitioning parameters
 f_nppv=0.35			; Fraction of NPP to vegetation
