--- a/inst/input/hector_ssp534-over.ini
+++ b/inst/input/hector_ssp534-over.ini
@@ -45,7 +45,7 @@ soil_c=1782   			; initial soil pool, Pg C
 ;tropical.veg_c=450
 ;tropical.detritus_c=45
 ;tropical.soil_c=578
-;tropcal.permafrost_c=0
+;tropical.permafrost_c=0
 ;tropical.npp_flux0=45.0
 
 ; Permafrost is inactive (zero) by default in Hector v3
