--- a/inst/input/hector_ssp460.ini
+++ b/inst/input/hector_ssp460.ini
@@ -18,6 +18,9 @@ tu=49000000         	; 4.9e7 high latitude overturning, m3/s
 twi=12500000        	; 1.25e7 warm-intermediate exchange, m3/s
 tid=200000000       	; 2.0e8 intermediate-deep exchange, m3/s
 
+preind_surface_c=900		; surface ocean C, IPCC AR6 Figure 5.12
+preind_interdeep_c=37100	; intermediate and deep ocean C, IPCC AR6 Figure 5.12
+
 ;------------------------------------------------------------------------
 [simpleNbox]
 ; Initial (preindustrial) carbon pools and fluxes
