fixing the send message problem

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -262,6 +262,7 @@ export(rename_biome)
 export(reset)
 export(run)
 export(runscenario)
+export(sendmessage)
 export(setvar)
 export(shutdown)
 export(split_biome)
