--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -1,7 +1,8 @@
 url: https://jgcri.github.io/hector/
-
 template:
   bootstrap: 5
+development:
+  mode: auto
 
 navbar:
   structure:
@@ -18,21 +19,21 @@ navbar:
        - text: "Building Hector"
          href: articles/BuildHector.html
        - text: "Intro to Hector R interface"
-         href: articles/intro-to-hector.html
+         href: articles/hector.html
        - text: "Documentation manuscripts & tutorials"
          href: articles/Hector-Wider-World.html
     - text: Examples
       menu:
         - text: "Example: Basic run and simple sensitivity anlaysis"
-          href: articles/intro-to-hector.html
+          href: articles/hector.html
         - text: "Example: Using Hector to solve for an emissions pathway"
-          href: articles/hector_apply.html
+          href: articles/ex_hector_apply.html
         - text: "Example: Running Hector with multiple biomes"
-          href: articles/multiple-biomes.html
+          href: articles/ex_multiple-biomes.html
         - text: "Example: Carbon tracking with Hector"
-          href: articles/carbon_tracking.html
+          href: articles/ex_carbon_tracking.html
         - text: "Example: Changing Hector's land ocean warming ratio parameter"
-          href: articles/land_ocean_warming.html
+          href: articles/ex_land_ocean_warming.html
     - text: Reference
       href: "reference/index.html"
     - text: News
@@ -41,81 +42,5 @@ navbar:
     - icon: fa-github fa-lg
       href: "https://github.com/JGCRI/hector"
 
-# Organize reference index
-reference:
-- title: Running Hector
-  contents:
-  - newcore
-  - methods
-  - run
-  - reset
-  - shutdown
-  - runscenario
 
-- title: Setting and retrieving data
-  contents:
-  - fetchvars
-  - setvar
-  - sendmessage
-  - isactive
-  - getdate
-  - startdate
-  - enddate
-  - getname
-  - getunits
-
-- title: Biome related functions
-  contents:
-  - matches("biome")
-
-- title: Carbon tracking
-  contents:
-  - get_tracking_data
-  - get_tracking_data_impl
-
-- title: Constraints
-  contents:
-  - constraints
-  - haloconstrain
-
-- title: Emissions & concentrations
-  contents:
-  - emissions
-  - haloemiss
-  - concentrations
-  - so2
-
-- title: Forcing
-  contents:
-  - delta
-  - forcings
-  - haloforcings
-  - rho
-
-- title: Log levels
-  contents:
-  - LL_DEBUG
-  - LL_NOTICE
-  - LL_WARNING
-  - LL_SEVERE
-
-- title: Parameters
-  contents:
-  - parameters
-  - delta
-  - rho
-
-- title: Other parameters and variable identifiers
-  contents:
-  - carboncycle
-  - methane
-  - ocean
-  - temperature
-
-
-# Organize the articles index, set it up so that all of the vignettes are listed.
-articles:
-- title: Index
-  contents:
-  - matches("(.*?)")
 
