pkgdown and github actions clean up (#671)
* fixing the send message problem
* fix documentation problems with getfxn and fxntabl
* remove the outdated citation page
* correct the pkgown ga
* reducing dependencies
* add the latest zenodo badge information
* update home page

Co-authored-by: Ben Bond-Lamberty <bondlamberty@pnnl.gov>

--- a/.github/workflows/leeyabot.yml
+++ b/.github/workflows/leeyabot.yml
@@ -46,7 +46,11 @@ jobs:
                 cat OutputDifferences.knit.md >> report.md
                 echo "![](./diff_plot.png)" >> report.md
                 echo "![](./comp_plot.png)" >> report.md
+            elif [ -f "same_plot.png" ]
+            then
+                cat OutputDifferences.knit.md >> report.md
             else
-                echo “leeyabot down“ > report.md
+                cat OutputDifferences.knit.md >> report.md
+                echo "leeyabot down :(" > report.md
             fi
             cml comment create report.md
