Fix FRAC_STATIC documentation; ignore CITATION file

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -101,6 +101,7 @@ export(FLUX_INTERIOR)
 export(FLUX_MIXED)
 export(FRAC_DECOMP_CH4)
 export(FRAC_FROZEN)
+export(FRAC_STATIC)
 export(FTOT_CONSTRAIN)
 export(F_LITTERD)
 export(F_NPPD)
