Ignore CITATION file; remove BH from DESCRIPTION Imports field
Each of these was generating a NOTE or WARNING

--- a/.Rbuildignore
+++ b/.Rbuildignore
@@ -43,5 +43,8 @@ _pkgdown.yml
 ^doc$
 ^Meta$
 ^vignettes/articles$
+
+# README and similar files
+^CITATION\.cff$
 ^CODE_OF_CONDUCT\.md$
 ^README\.Rmd$
