--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -53,9 +53,7 @@ License: GPL-3
 Encoding: UTF-8
 LazyData: true
 LinkingTo: Rcpp, BH
-Imports: 
-    Rcpp (>= 0.12), 
-    BH (>= 1.69)
+Imports: Rcpp (>= 0.12)
 Suggests:
     testthat,
     knitr,
