To corrections to DESCRIPTION authors

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -18,10 +18,9 @@ Authors@R: c(person("Kalyn", "Dorheim",
 	        role = "ctb",
 	        comment = c(ORCID = "0000-0003-1834-6539")),
 	     person("Robert", "Link", 
-            email = "robert.link@pnnl.gov", 
             role = "ctb",
             comment = c(ORCID = "0000-0002-7071-248X")),
-        person("Nicholson", "Mat", 
+        person("Mat", "Nicholson", 
             role = "ctb",
             comment = c(github = "mnichol3")),
 	     person("Pralit", "Patel", 
