Integrate Woodard et al. (2021) permafrost code and parameters (#655)
* Permafrost data structures, init/reset code, output

* Implement R code related to permafrost module 

* Add more permafrost info to INI files

* Add pf code to calcDerivs and slowparameval

* Change from using R's lognormal to boost::math::lognormal(); see #512

* Extract thaw/refreeze computation to a function

* Implement pf in stashCvalues(); fix f_frozen calculation

* Remove static_c as a pool

* Connect CH4 emissions to the atmosphere

* Add R unit tests and command-line test script 

* Fix various permafrost bugs related to biomes

* Add Woodard et al. 2021 code for reference

* Address minor @dawnlwoodard @kdorheim comments

* Update simpleNbox-runtime.cpp

* Add permafrost vignette

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -99,6 +99,9 @@ export(EMISSIONS_SO2)
 export(FFI_EMISSIONS)
 export(FLUX_INTERIOR)
 export(FLUX_MIXED)
+export(FRAC_DECOMP_CH4)
+export(FRAC_FROZEN)
+export(FRAC_STATIC)
 export(FTOT_CONSTRAIN)
 export(F_LITTERD)
 export(F_NPPD)
@@ -151,6 +154,9 @@ export(OCEAN_UPTAKE)
 export(PCO2)
 export(PCO2_HL)
 export(PCO2_LL)
+export(PERMAFROST_C)
+export(PERMAFROST_MU)
+export(PERMAFROST_SIGMA)
 export(PH)
 export(PH_HL)
 export(PH_LL)
@@ -237,6 +243,7 @@ export(SST)
 export(SST_HL)
 export(SST_LL)
 export(TAS_CONSTRAIN)
+export(THAWEDP_C)
 export(TID)
 export(TRACKING_DATE)
 export(TT)
