--- a/tests/testthat/input/luc_pulse.ini
+++ b/tests/testthat/input/luc_pulse.ini
@@ -43,6 +43,11 @@ detritus_c=55			; detritus, Pg C
 soil_c=1782   			; soil, Pg C
 ;boreal.npp_flux0=5.0
 ;tropical.npp_flux0=45.0
+
+; Permafrost is inactive by default in Hector v3
+; See Woodard et al. 2021, 10.5194/gmd-14-4751-2021
+permafrost_c=0			; permafrost, Pg C
+
 npp_flux0=55.9			; net primary production, Pg C/yr, (calibrated to historical observations)
 
 ; Partitioning parameters
