--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -2,11 +2,20 @@
 # Need help debugging build failures? Start at https://github.com/r-lib/actions#where-to-find-help
 on:
   push:
-    branches: [main, master, v3_dev]
+    branches: [master]
   pull_request:
-    branches: [main, master, v3_dev]
+    branches: [master]
 
 name: R-CMD-check
+
+schedule:
+    # * is a special character in YAML so you have to quote this string
+    # Launch run at 6am the 1st of every month.
+    - cron:  '0 6 1 * *'
+
+  # Allows you to run this workflow manually from the Actions tab
+workflow_dispatch:
+    name: R-CMD
 
 jobs:
   R-CMD-check:
