--- a/.github/workflows/pkgdown.yaml
+++ b/.github/workflows/pkgdown.yaml
@@ -2,9 +2,9 @@
 # Need help debugging build failures? Start at https://github.com/r-lib/actions#where-to-find-help
 on:
   push:
-    branches: [main, master, v3_dev, dev]
+    branches: [master]
   pull_request:
-    branches: [main, master, v3_dev, dev]
+    branches: [master]
   release:
     types: [published]
   workflow_dispatch:
