--- a/.github/workflows/codecov.yaml
+++ b/.github/workflows/codecov.yaml
@@ -4,7 +4,7 @@ on:
       - master
   pull_request:
     branches:
-      - master
+      - '**' # matches every branch
   schedule:
    # * is a special character in YAML so you have to quote this string, it is set up to run at 6am
    # on the first day of the month, this is helpful for periods of time when PRs are not being merged.
