--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -1,22 +1,21 @@
-# Workflow derived from https://github.com/r-lib/actions/tree/v2/examples
-# Need help debugging build failures? Start at https://github.com/r-lib/actions#where-to-find-help
+name: R-CMD-check
+# Controls when the action will run.
 on:
   push:
-    branches: [master]
+    branches:
+      - master
   pull_request:
-    branches: [master]
+    branches:
+      - '**' # matches every branch
 
-name: R-CMD-check
-
-schedule:
+  schedule:
     # * is a special character in YAML so you have to quote this string
     # Launch run at 6am the 1st of every month.
     - cron:  '0 6 1 * *'
 
   # Allows you to run this workflow manually from the Actions tab
-workflow_dispatch:
-    name: R-CMD
-
+  workflow_dispatch:
+  
 jobs:
   R-CMD-check:
     runs-on: ${{ matrix.config.os }}
