--- a/.github/workflows/pkgdown.yaml
+++ b/.github/workflows/pkgdown.yaml
@@ -3,6 +3,9 @@ on:
     branches:
       - main
       - master
+    pull-request:
+      - main
+      - master
   schedule:
     # * is a special character in YAML so you have to quote this string
     # Launch run at 6am the 1st of every month.
