--- a/.github/workflows/pkgdown.yaml
+++ b/.github/workflows/pkgdown.yaml
@@ -6,6 +6,7 @@ on:
     pull-request:
       - main
       - master
+      - oldyaml
   schedule:
     # * is a special character in YAML so you have to quote this string
     # Launch run at 6am the 1st of every month.
