--- a/project_files/VS/hector-lib.vcxproj
+++ b/project_files/VS/hector-lib.vcxproj
@@ -103,6 +103,7 @@
     <Keyword>Win32Proj</Keyword>
     <RootNamespace>hector</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
+    <BOOSTROOT Condition=" '$(BOOSTROOT)' == ''">../../../../../../../libs/boost-lib</BOOSTROOT>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
