Enable global mean surface temperature as Hector output

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -107,6 +107,7 @@ export(F_LITTERD)
 export(F_NPPD)
 export(F_NPPV)
 export(GLOBAL_TAS)
+export(GMST)
 export(HALON1211_CONSTRAIN)
 export(HALON1301_CONSTRAIN)
 export(HALON2402_CONSTRAIN)
