fix : convert trailing comments to single sline comments

--- a/inst/input/hector_ssp585.ini
+++ b/inst/input/hector_ssp585.ini
@@ -226,7 +226,8 @@ delta_HFC32=0.0 				; tropospheric adjustments scalar unitless (7.3.2.4 IPCC AR6
 molarMass=52.0					; grams
 HFC32_emissions=csv:tables/ssp585_emiss-constraints_rf.csv
 
-[HFC4310_halocarbon]				; This is equivalent to HFC-43-10mee
+[HFC4310_halocarbon]				
+; This is equivalent to HFC-43-10mee
 tau=17.0					; lifetime in years (Table 7.SM.7 IPPC AR6)
 rho_HFC4310=0.000357				; radiative efficiencies W/m2/ppt (Table 7.SM.7 IPPC AR6)
 delta_HFC4310=0.0 				; tropospheric adjustments scalar unitless (7.3.2.4 IPCC AR6)
