--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -3,7 +3,7 @@ name: R-CMD-check
 on:
   push:
     branches:
-      - master
+      - main
   pull_request:
     branches:
       - '**' # matches every branch
@@ -15,7 +15,7 @@ on:
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
-  
+
 jobs:
   R-CMD-check:
     runs-on: ${{ matrix.config.os }}
