QA/QC of permafrost performance

--- a/inst/input/hector_ssp245.ini
+++ b/inst/input/hector_ssp245.ini
@@ -35,34 +35,40 @@ preind_interdeep_c=37100	; intermediate and deep ocean C, IPCC AR6 Figure 5.12
 
 atmos_co2=590.33		; initial atmospheric carbon pool Pg C of CO2 size used in spin up, consistent with C0
 C0=277.15			; preindustrial CO2 from table 7.SM.1 IPCC AR6, CO2 radiative forcing question is calibrated to this value
-npp_flux0=56.2			; preindustrial net primary production, Pg C/yr from Ito et al. 2011
+;npp_flux0=56.2			; preindustrial net primary production, Pg C/yr from Ito et al. 2011
 
-veg_c=550			; initial vegetation pool, Pg C
-detritus_c=55			; initial detritus pool, Pg C
-soil_c=1782   			; initial soil pool, Pg C
-;boreal.veg_c=100		
-;boreal.detritus_c=15
-;boreal.soil_c=1200
-;boreal.permafrost_c=865
-;boreal.npp_flux0=5.0
-;tropical.veg_c=450
-;tropical.detritus_c=45
-;tropical.soil_c=578
-;tropical.permafrost_c=0
-;tropical.npp_flux0=45.0
+;veg_c=550			; initial vegetation pool, Pg C
+;detritus_c=55			; initial detritus pool, Pg C
+;soil_c=1782   			; initial soil pool, Pg C
+boreal.veg_c=100		
+boreal.detritus_c=15
+boreal.soil_c=1200
+boreal.permafrost_c=865
+boreal.npp_flux0=5.0
+tropical.veg_c=450
+tropical.detritus_c=45
+tropical.soil_c=578
+tropical.permafrost_c=0
+tropical.npp_flux0=45.0
 
 ; Permafrost is inactive (zero) by default in Hector v3
 ; See Woodard et al. 2021, 10.5194/gmd-14-4751-2021
-permafrost_c=0	; permafrost, Pg C
+;permafrost_c=0	; permafrost, Pg C
 ;fpf_static=0.74		; fraction of permafrost that is static (non-labile)
 ;rh_ch4_frac=0.023	; fraction of thawed permafrost decomposed as CH4
 ;pf_mu=1.67			; permafrost thaw parameter; see Woodard et al. 2021
 ;pf_sigma=0.986		; permafrost thaw parameter; see Woodard et al. 2021
 
 ; Partitioning parameters
-f_nppv=0.35			; Fraction of NPP to vegetation
-f_nppd=0.60			; Fraction of NPP to detritus (balance to soil)
-f_litterd=0.98	; Fraction of litter flux to detritus (balance to soil)
+;f_nppv=0.35			; Fraction of NPP to vegetation
+boreal.f_nppv=0.35
+tropical.f_nppv=0.35
+;f_nppd=0.60			; Fraction of NPP to detritus (balance to soil)
+boreal.f_nppd=0.60
+tropical.f_nppd=0.60
+;f_litterd=0.98	; Fraction of litter flux to detritus (balance to soil)
+boreal.f_litterd=0.98
+tropical.f_litterd=0.98
 
 ; Anthropogenic contributions: emissions, direct air carbon capture and storage, and land use change, Pg C/yr
 ffi_emissions=csv:tables/ssp245_emiss-constraints_rf.csv	
@@ -82,12 +88,16 @@ luc_uptake=csv:tables/ssp245_emiss-constraints_rf.csv
 
 ; CO2 and temperature effects on the carbon cycle
 ; these are global values, can optionally specify biome-specific ones as above
-beta=0.55     		; CO2 fertilization factor (unitless), calibrated to historical observations see Dorheim et al. in prep for details
-q10_rh=2.2   		; Heterotrophic respiration temperature sensitivity factor (unitless), calibrated to historical observations see Dorheim et al. in prep for details
+;beta=0.55     		; CO2 fertilization factor (unitless), calibrated to historical observations see Dorheim et al. in prep for details
+boreal.beta=0.55
+tropical.beta=0.55
+;q10_rh=2.2   		; Heterotrophic respiration temperature sensitivity factor (unitless), calibrated to historical observations see Dorheim et al. in prep for details
+boreal.q10_rh=2.2
+tropical.q10_rh=2.2
 
 ; Optional biome-specific warming factors
 ; by default, assume 1.0 (i.e., warms as fast as the globe)
-;boreal.warmingfactor=1.2	; i.e., biome will warm 1.2 C for every 1 C globally
+boreal.warmingfactor=2	; i.e., biome will warm 2 degC for every 1 degC globally
 
 ; Albedo effect, in W/m2. The model assumes a constant value if nothing specified
 RF_albedo=csv:tables/ssp245_emiss-constraints_rf.csv	;
