--- a/.github/workflows/command-line.yaml
+++ b/.github/workflows/command-line.yaml
@@ -1,5 +1,5 @@
 # This is a basic workflow to help you get started with Actions
-# based on https://github.com/JGCRI/hector/new/master?filename=.github%2Fworkflows%2Fmain.yml&workflow_template=blank
+# based on https://github.com/JGCRI/hector/new/main?filename=.github%2Fworkflows%2Fmain.yml&workflow_template=blank
 
 name: Command Line Hector
 
@@ -7,7 +7,7 @@ name: Command Line Hector
 on:
   push:
     branches:
-      - master
+      - main
   pull_request:
     branches:
       - '**' # matches every branch
@@ -21,10 +21,14 @@ on:
   workflow_dispatch:
 
 jobs:
+
   # This workflow contains two jobs, one that builds hector on ubuntu and the second
   # builds and tests Hector on macos. The purpose of this work for is to make sure that Hector
   # can be built from the command line.
   ubuntu:
+    # Don't run scheduled job on forks, only in main repository.
+    if: (github.event_name == 'schedule' && github.repository == 'JGCRI/hector') || (github.event_name != 'schedule')
+
     runs-on: ubuntu-latest
 
     # Steps represent a sequence of tasks that will be executed as part of the job
