New Aerosol factors

--- a/inst/input/hector_ssp126.ini
+++ b/inst/input/hector_ssp126.ini
@@ -51,7 +51,7 @@ soil_c=917   		; initial soil pool, Pg C
 ;nonpf.soil_c=609
 
 ; Permafrost is active by default in Hector v3
-; See Woodard et al. 2021, 10.5194/gmd-14-4751-2021
+; See Woodard et al. 2021, 10.5194/gmd-14-4751-2021orh
 permafrost_c=865	; permafrost, Pg C
 ;pf.permafrost_c=865
 ;nonpf.permafrost_c=0
@@ -165,10 +165,10 @@ baseyear=1750		; when to start reporting; by definition, all F=0 in this year
 delta_co2=0.05		; (unitless) forcing tropospheric adjustments for CO2 (7.3.2.1 of IPCC AR6)
 delta_ch4=-.14		; (unitless) forcing tropospheric adjustments for CH4 (7.3.2.2 of IPCC AR6)
 delta_n2o=0.07		; (unitless) forcing tropospheric adjustments for N2O (7.3.2.3 of IPCC AR6)
-rho_bc=0.0508           ; (W yr m–2 C Tg–1) IPCC AR6 radiative efficiency BC (7.SM.1.3 of IPCC AR6)
-rho_oc=-.00621          ; (W yr m–2 C Tg–1) IPCC AR6 radiative efficiency OC (7.SM.1.3.1 of IPCC AR6)
-rho_so2=-.00000724      ; (W yr m–2 S Gg-1) IPCC AR6 radiative efficiency SO2 (7.SM.1.3.1 of IPCC AR6)
-rho_nh3=-.00208         ; (W yr m–2 NH3Tg–1) IPCC AR6 radiative efficiency NH3 (7.SM.1.3.1 of IPCC AR6)
+rho_bc=0.06386286       ; (W yr m–2 C Tg–1) see Dorheim et al. in prep
+rho_oc=-0.006407143     ; (W yr m–2 C Tg–1) see Dorheim et al. in prep
+rho_so2=-7.469841e-06   ; (W yr m–2 S Gg-1) see Dorheim et al. in prep
+rho_nh3=-0.002146032    ; (W yr m–2 NH3Tg–1) see Dorheim et al. in prep
 
 ; Miscellaneous radiative forcings are by default zero, but can read in from a input table to
 ; represent additional forcings not modeled by Hector (e.g. solar, bc on snow, jet contrails)
