--- a/inst/input/hector_ssp126.ini
+++ b/inst/input/hector_ssp126.ini
@@ -37,7 +37,7 @@ preind_interdeep_c=37100	; intermediate and deep ocean C, IPCC AR6 Figure 5.12
 atmos_co2=590.33	; initial atmospheric carbon pool Pg C of CO2 size used in spin up, consistent with C0
 C0=277.15			; preindustrial CO2 from table 7.SM.1 IPCC AR6; CO2 radiative forcing is calibrated to this value
 npp_flux0=56.2		; preindustrial net primary production, Pg C/yr from Ito et al. 2011
-;pf.npp_flux0=5.6	; cf. Figure 3 in Chen et al. 2017 10.1088/1748-9326/aa8978 
+;pf.npp_flux0=5.6	; cf. Figure 3 in Chen et al. 2017 10.1088/1748-9326/aa8978
 ;nonpf.npp_flux0=50.6
 
 veg_c=550			; initial vegetation pool, Pg C
@@ -73,7 +73,7 @@ f_litterd=0.98		; Fraction of litter flux to detritus (balance to soil)
 ;nonpf.f_litterd=0.98
 
 ; Anthropogenic contributions: emissions, direct air carbon capture and storage, and land use change, Pg C/yr
-ffi_emissions=csv:tables/ssp126_emiss-constraints_rf.csv	
+ffi_emissions=csv:tables/ssp126_emiss-constraints_rf.csv
 daccs_uptake=csv:tables/ssp126_emiss-constraints_rf.csv
 luc_emissions=csv:tables/ssp126_emiss-constraints_rf.csv
 luc_uptake=csv:tables/ssp126_emiss-constraints_rf.csv
@@ -165,10 +165,10 @@ baseyear=1750		; when to start reporting; by definition, all F=0 in this year
 delta_co2=0.05		; (unitless) forcing tropospheric adjustments for CO2 (7.3.2.1 of IPCC AR6)
 delta_ch4=-.14		; (unitless) forcing tropospheric adjustments for CH4 (7.3.2.2 of IPCC AR6)
 delta_n2o=0.07		; (unitless) forcing tropospheric adjustments for N2O (7.3.2.3 of IPCC AR6)
-rho_bc=0.0508           ; (W yr m–2 C Tg–1) IPCC AR6 radiative efficiency BC (7.SM.1.3 of IPCC AR6)
-rho_oc=-.00621          ; (W yr m–2 C Tg–1) IPCC AR6 radiative efficiency OC (7.SM.1.3.1 of IPCC AR6)
-rho_so2=-.00000724      ; (W yr m–2 S Gg-1) IPCC AR6 radiative efficiency SO2 (7.SM.1.3.1 of IPCC AR6)
-rho_nh3=-.00208         ; (W yr m–2 NH3Tg–1) IPCC AR6 radiative efficiency NH3 (7.SM.1.3.1 of IPCC AR6)
+rho_bc=0.06386286       ; (W yr m–2 C Tg–1) see Dorheim et al. in prep
+rho_oc=-0.006407143     ; (W yr m–2 C Tg–1) see Dorheim et al. in prep
+rho_so2=-7.469841e-06   ; (W yr m–2 S Gg-1) see Dorheim et al. in prep
+rho_nh3=-0.002146032    ; (W yr m–2 NH3Tg–1) see Dorheim et al. in prep
 
 ; Miscellaneous radiative forcings are by default zero, but can read in from a input table to
 ; represent additional forcings not modeled by Hector (e.g. solar, bc on snow, jet contrails)
@@ -232,7 +232,7 @@ delta_HFC32=0.0 				; tropospheric adjustments scalar unitless (7.3.2.4 IPCC AR6
 molarMass=52.0					; grams
 HFC32_emissions=csv:tables/ssp126_emiss-constraints_rf.csv
 
-[HFC4310_halocarbon]				
+[HFC4310_halocarbon]
 ; This is equivalent to HFC-43-10mee
 tau=17.0					; lifetime in years (Table 7.SM.7 IPPC AR6)
 rho_HFC4310=0.000357				; radiative efficiencies W/m2/ppt (Table 7.SM.7 IPPC AR6)
