--- a/project_files/Xcode/hector.xcodeproj/xcshareddata/xcschemes/ssp245.xcscheme
+++ b/project_files/Xcode/hector.xcodeproj/xcshareddata/xcschemes/ssp245.xcscheme
@@ -34,9 +34,10 @@
       buildConfiguration = "Debug"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
+      customLLDBInitFile = "/Users/dorh012/Documents/Hector-WD/hector"
       launchStyle = "0"
       useCustomWorkingDirectory = "YES"
-      customWorkingDirectory = "${HECTORDIR}"
+      customWorkingDirectory = "/Users/dorh012/Documents/Hector-WD/hector"
       ignoresPersistentStateOnLaunch = "NO"
       debugDocumentVersioning = "YES"
       debugServiceExtension = "internal"
@@ -53,7 +54,7 @@
       </BuildableProductRunnable>
       <CommandLineArguments>
          <CommandLineArgument
-            argument = "/Users/dorh012/Documents/Hector-WD/hector/inst/input/hector_ssp245.ini"
+            argument = "./inst/input/hector_ssp245.ini"
             isEnabled = "YES">
          </CommandLineArgument>
       </CommandLineArguments>
