--- a/inst/input/hector_ssp245.ini
+++ b/inst/input/hector_ssp245.ini
@@ -162,8 +162,8 @@ baseyear=1750		; when to start reporting; by definition, all F=0 in this year
 
 ; Optional radiative forcing constraint
 ;RF_tot_constrain=csv:tables/CONSTRAINT.csv
-alpha=1.0		; (unitless) uncertainty scaling factor for volcanic forcing 
-volscl=1.0		; (unitless) uncertainty scaling factor for volcanic forcing
+aero_scalar=1.0		; (unitless) uncertainty scaling factor for volcanic forcing
+vol_scalar=1.0		; (unitless) uncertainty scaling factor for volcanic forcing
 delta_co2=0.05		; (unitless) forcing tropospheric adjustments for CO2 (7.3.2.1 of IPCC AR6)
 delta_ch4=-.14		; (unitless) forcing tropospheric adjustments for CH4 (7.3.2.2 of IPCC AR6)
 delta_n2o=0.07		; (unitless) forcing tropospheric adjustments for N2O (7.3.2.3 of IPCC AR6)
