--- a/project_files/Xcode/hector.xcodeproj/xcshareddata/xcschemes/ssp245.xcscheme
+++ b/project_files/Xcode/hector.xcodeproj/xcshareddata/xcschemes/ssp245.xcscheme
@@ -53,7 +53,7 @@
       </BuildableProductRunnable>
       <CommandLineArguments>
          <CommandLineArgument
-            argument = "/Users/dorh012/Documents/Hector-WD/hector/inst/input/hector_ssp245.ini"
+            argument = "./inst/input/hector_ssp245.ini"
             isEnabled = "YES">
          </CommandLineArgument>
       </CommandLineArguments>
