--- a/tests/testthat/input/luc_pulse.ini
+++ b/tests/testthat/input/luc_pulse.ini
@@ -143,6 +143,8 @@ baseyear=1750		; when to start reporting; by definition, all F=0 in this year
 ; Optional radiative forcing constraint
 ; If supplied, the model will use these data, ignoring what it calculates
 ;RF_tot_constrain=csv:tables/CONSTRAINT.csv
+aero_scalar=1.0     		; uncertainty scaling factor for aerosol forcing
+vol_scalar=1.0    		; uncertainty scaling factor for volcanic forcing
 delta_co2=0.05		; (unitless) forcing tropospheric adjustments for CO2 (7.3.2.1 of IPCC AR6)
 delta_ch4=-.14		; (unitless) forcing tropospheric adjustments for CH4 (7.3.2.2 of IPCC AR6)
 delta_n2o=0.07		; (unitless) forcing tropospheric adjustments for N2O (7.3.2.3 of IPCC AR6)
@@ -164,8 +166,6 @@ enabled=1
 
 S=2.7 			; equilibrium climate sensitivity for 2xCO2, degC (calibrated to historical)
 diff=2.4		; ocean heat diffusivity, cm2/s (calibrated to historical)
-alpha=0.5     		; scaling factor for aerosol forcing, calibrated to historical observations
-volscl=1.0    		; scaling factor for volcanic forcing
 qco2=3.75     		; 2×CO2 RF (7.3.2 of IPCC AR6)
 
 ; Optional global temperature constraint
