Expose oh lifetime or oh tau to R bindings so it is easy to fetch outout

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -125,6 +125,7 @@ export(HFC32_CONSTRAIN)
 export(HFC4310_CONSTRAIN)
 export(HL_OCEAN_UPTAKE)
 export(LAND_TAS)
+export(LIFETIME_OH)
 export(LIFETIME_SOIL)
 export(LIFETIME_STRAT)
 export(LL_DEBUG)
