Add H2 emissions to Hector C++ core, R wrapper, and input materials

--- a/inst/input/hector_ssp119.ini
+++ b/inst/input/hector_ssp119.ini
@@ -130,6 +130,8 @@ CH4_emissions=csv:tables/ssp119_emiss-constraints_rf.csv     ; emissions time se
 NOX_emissions=csv:tables/ssp119_emiss-constraints_rf.csv     ; emissions time series
 CO_emissions=csv:tables/ssp119_emiss-constraints_rf.csv      ; emissions time series
 NMVOC_emissions=csv:tables/ssp119_emiss-constraints_rf.csv   ; emissions time series
+H2_emissions=csv:tables/ssp119_emiss-constraints_rf.csv      ; emissions time series
+
 
 TOH0=6.6			; inital OH lifetime (years)
 CNOX=0.0042			; coefficent for NOX
