address response to pr 758

--- a/inst/input/hector_ssp460.ini
+++ b/inst/input/hector_ssp460.ini
@@ -37,7 +37,7 @@ preind_interdeep_c=37100	; intermediate and deep ocean C, IPCC AR6 Figure 5.12
 atmos_co2=590.33	; initial atmospheric carbon pool Pg C of CO2 size used in spin up, consistent with C0
 C0=277.15			; preindustrial CO2 from table 7.SM.1 IPCC AR6; CO2 radiative forcing is calibrated to this value
 npp_flux0=56.2		; preindustrial net primary production, Pg C/yr from Ito et al. 2011
-;pf.npp_flux0=5.6	; cf. Figure 3 in Chen et al. 2017 10.1088/1748-9326/aa8978 
+;pf.npp_flux0=5.6	; cf. Figure 3 in Chen et al. 2017 10.1088/1748-9326/aa8978
 ;nonpf.npp_flux0=50.6
 
 veg_c=550			; initial vegetation pool, Pg C
@@ -73,7 +73,7 @@ f_litterd=0.98		; Fraction of litter flux to detritus (balance to soil)
 ;nonpf.f_litterd=0.98
 
 ; Anthropogenic contributions: emissions, direct air carbon capture and storage, and land use change, Pg C/yr
-ffi_emissions=csv:tables/ssp460_emiss-constraints_rf.csv	
+ffi_emissions=csv:tables/ssp460_emiss-constraints_rf.csv
 daccs_uptake=csv:tables/ssp460_emiss-constraints_rf.csv
 luc_emissions=csv:tables/ssp460_emiss-constraints_rf.csv
 luc_uptake=csv:tables/ssp460_emiss-constraints_rf.csv
@@ -134,11 +134,11 @@ H2_emissions=csv:tables/ssp119_emiss-constraints_rf.csv      ; emissions time se
 
 
 TOH0=6.6			; inital OH lifetime (years)
-CNOX=0.0042			; coefficent for NOX
-CCO=-0.000105		; coefficent for CO
-CNMVOC=-0.000315	; coefficent for NMVOC (non methane VOC)
-CCH4=-0.32			; coefficent for CH4
-CH2=-0.00044625 ; coefficent for H2
+CNOX=0.0042			; coefficient for NOX
+CCO=-0.000105		; coefficient for CO
+CNMVOC=-0.000315	; coefficient for NMVOC (non methane VOC)
+CCH4=-0.32			; coefficient for CH4
+CH2=-0.00044625 ; coefficient for H2 TODO-H2
 
 
 ;------------------------------------------------------------------------
@@ -236,7 +236,7 @@ delta_HFC32=0.0 				; tropospheric adjustments scalar unitless (7.3.2.4 IPCC AR6
 molarMass=52.0					; grams
 HFC32_emissions=csv:tables/ssp460_emiss-constraints_rf.csv
 
-[HFC4310_halocarbon]				
+[HFC4310_halocarbon]
 ; This is equivalent to HFC-43-10mee
 tau=17.0					; lifetime in years (Table 7.SM.7 IPPC AR6)
 rho_HFC4310=0.000357				; radiative efficiencies W/m2/ppt (Table 7.SM.7 IPPC AR6)
