--- a/tests/testthat/input/luc_pulse.ini
+++ b/tests/testthat/input/luc_pulse.ini
@@ -112,10 +112,10 @@ CO_emissions=csv:luc_pulse_tables.csv      ; emissions time series
 NMVOC_emissions=csv:luc_pulse_tables.csv   ; emissions time series
 
 TOH0=6.6			; inital OH lifetime (years)
-CNOX=0.0042			; coefficent for NOX
-CCO=-0.000105			; coefficent for CO
-CNMVOC=-0.000315		; coefficent for NMVOC (non methane VOC)
-CCH4=-0.32			; coefficent for CH4
+CNOX=0.0042			; coefficient for NOX
+CCO=-0.000105			; coefficient for CO
+CNMVOC=-0.000315		; coefficient for NMVOC (non methane VOC)
+CCH4=-0.32			; coefficient for CH4
 
 ;------------------------------------------------------------------------
 [ozone]
